--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -41,6 +41,7 @@
                 android:orientation="horizontal"
                 android:background="@drawable/boarder_bg">
                 <EditText
+                    android:id="@+id/login1"
                     android:padding="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -53,7 +54,7 @@
                     android:phoneNumber="true"
                     android:drawableStart="@drawable/ic_round_email_24"
                     android:drawablePadding="10dp"
-                    android:hint="phone"/>
+                    android:hint="email"/>
             </LinearLayout>
 
             <Space
@@ -65,6 +66,7 @@
                 android:orientation="horizontal"
                 android:background="@drawable/boarder_bg">
                 <EditText
+                    android:id="@+id/password1"
                     android:padding="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -72,7 +74,7 @@
                     android:background="@null"
                     android:drawableStart="@drawable/ic_round_security_24"
                     android:drawablePadding="10dp"
-                    android:hint="*******"/>
+                    android:hint="password"/>
 
             </LinearLayout>
 
@@ -102,7 +104,15 @@
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
+    <ProgressBar
+        android:id="@+id/idPBLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progress_back"
+        android:visibility="gone" />
 
 
 </FrameLayout>
