--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
 
 
         <Button
-            android:id="@+id/barber_btn"
+            android:onClick="To_barber"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_margin="8dp"
