--- a/user/src/main/res/layout/activity_main.xml
+++ b/user/src/main/res/layout/activity_main.xml
@@ -43,39 +43,6 @@
         android:textColor="@color/black"
         android:text="Select barber shop "/>
 
-    <LinearLayout
-        android:layout_margin="10dp"
-        android:id="@+id/itemView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/boarder_bg"
-        android:orientation="vertical">
-        <LinearLayout
-            android:padding="10dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Description"/>
-
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="get the best hair services at bluster touch, we make our customers our priority."/>
-
-        </LinearLayout>
-
-
-
-    </LinearLayout>
-
-
     <RelativeLayout
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
@@ -93,18 +60,28 @@
             android:gravity="end"
             android:text="Booking" />
     </RelativeLayout>
-
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/service_recycler"
+            android:id="@+id/rvNumbers"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
-
-
+    <!--floating action button-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:onClick="To_add"
+        android:id="@+id/idFABAddCourse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_round_add_24"
+        app:backgroundTint="@color/purple_200"
+        app:tint="@color/white" />
 
 </LinearLayout>
