--- a/user/src/main/res/layout/services_cardview.xml
+++ b/user/src/main/res/layout/services_cardview.xml
@@ -18,7 +18,7 @@
 
 
        <ImageView
-           android:id="@+id/product_image"
+           android:id="@+id/service_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
@@ -42,7 +42,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/product_name"
+                    android:id="@+id/service_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="salon"
@@ -51,7 +51,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/product_description"
+                    android:id="@+id/service_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="description"
@@ -59,7 +59,7 @@
 
 
                 <TextView
-                    android:id="@+id/product_price"
+                    android:id="@+id/service_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
